--- a/styles.css
+++ b/styles.css
@@ -2,37 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
 }
 
 header {
     background-color: #333;
     color: #fff;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-header nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-header nav li {
-    margin-right: 20px;
-}
-
-header nav a {
-    color: #fff;
-    text-decoration: none;
-    transition: color 0.2s ease;
-}
-
-header nav a:hover {
-    color: #ccc;
 }
 
 main {
@@ -43,30 +19,11 @@ main {
 }
 
 section {
-    background-color: #fff;
+    background-color: #f9f9f9;
     padding: 20px;
     margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-h1, h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-p {
-    margin-bottom: 20px;
-}
-
-#calculadora form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-}
-
-#calculadora label {
-    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
 }
 
 #calculadora input[type="number"] {
@@ -87,13 +44,6 @@ p {
 
 #calculadora button[type="submit"]:hover {
     background-color: #444;
-}
-
-#chat-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
 }
 
 #chat-input {
@@ -121,12 +71,6 @@ p {
     background-color: #f9f9f9;
     border: 1px solid #ccc;
     border-radius: 10px;
-}
-
-#instagram img {
-    width: 50px;
-    height: 50px;
-    margin: 20px;
 }
 
 footer {
