--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,1 @@
-<!--e--> body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-}
-
-main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-section {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    width: 30%;
-}
-
-h2 {
-    margin-top: 0;
-}
-
-input[type="number"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-button {
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #3e8e41;
-}
-
-#historico-lista, #arquivos-lista {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-#historico-lista li, #arquivos-lista li {
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
-}
-
-#historico-lista li:last-child, #arquivos-lista li:last-child {
-    border-bottom: none;
-}
+//
